--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,6 +10,7 @@
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
+		data-sap-ui-preload="async"
 		data-sap-ui-resourceroots='{
 			"sap.ui.demo.walkthrough": "./"
 		}'
