--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,12 +12,12 @@
 		data-sap-ui-async="true"
 		data-sap-ui-preload="async"
 		data-sap-ui-resourceroots='{
-			"sap.ui.demo.walkthrough": "./"
+			"cbc.co.simulador_costos": "./"
 		}'
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport">
 	</script>
 </head>
 <body class="sapUiBody" id="content">
-	<div data-sap-ui-component data-name="sap.ui.demo.walkthrough" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
+	<div data-sap-ui-component data-name="cbc.co.simulador_costos" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
 </body>
 </html>
