--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,6 +7,7 @@
 		id="sap-ui-bootstrap"
 		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_belize"
+		data-sap-ui-modules="sap/ui/core/ComponentSupport"
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
@@ -14,10 +15,26 @@
 		data-sap-ui-resourceroots='{
 			"cbc.co.simulador_costos": "./"
 		}'
-		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport">
+		data-sap-ui-xx-componentpreload="off"
+		data-sap-ui-xx-waitfortheme="init">
 	</script>
 </head>
 <body class="sapUiBody" id="content">
-	<div data-sap-ui-component data-name="cbc.co.simulador_costos" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
+	<div data-sap-ui-component 
+	   	 data-id="rootComponentContainer"
+		 data-name="cbc.co.simulador_costos" 
+		 data-height="100%"
+		 data-settings='{"id" : "rootComponent"}'>
+		
+	</div>
+	<script>
+	//	sap.ui.getCore().attachInit(function(){newsap.m.Shell({   
+
+	//	 appWidthLimited:false,
+	//			app:newsap.ui.core.ComponentContainer({
+	//				height :"100%",name:"cbc.co.simulador_costos"})}).placeAt("content");});
+		
+	</script>
+	
 </body>
 </html>
