--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,7 +5,7 @@
 	<title>CBC</title>
 	<script
 		id="sap-ui-bootstrap"
-		src="https://sapui5.hana.ondemand.com/1.62.0/resources/sap-ui-core.js"
+		src="https://sapui5.hana.ondemand.com/1.60.18/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_belize"
 		data-sap-ui-modules="sap/ui/core/ComponentSupport"
 		data-sap-ui-libs="sap.m"
